# family-tree-desktop

./: .env.example  .gitignore  Entity Relationship Diagram.docx  FamilyDesktop.spec  README.md  Software Requirement Specification.docx  Use Case Diagram.docx  family_tree.db  pyproject.toml
src/family_desktop/: app.py  config.py  database.py  models.py
src/family_desktop/services/: __init__.py  kinship.py  marriages.py  people.py  reports.py  tree_builder.py  users.py
src/family_desktop/ui/: login.py  main.py
src/family_desktop/utils/: security.py
