[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-desktop"
version = "0.1.0"
description = "Desktop Family Tree manager with SQLite backend"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Bagus Prasojo"}]
dependencies = [
    "SQLAlchemy>=2.0",
    "graphviz>=0.20",
    "Pillow>=10.0",
    "reportlab>=4.0",
    "python-dotenv>=1.0"
]

[project.scripts]
family-desktop = "family_desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]
